2007-11-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/tutorial/src/mimoconv.cpp: Updated MIMO with convolutional
	coding example program

2007-11-01  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/local/installation.doc: Updated the "no root" installation
	description

2007-10-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h: operator*(Vec &v, Mat &m) documented as
	deprecated

	The existence of this operator in IT++ is questionable, since its
	behaviour is equivalent to "outer_product(v, m.get_row(0))".
	Moreover, the documentation was wrong so many users had problems
	using it correctly. This patch marks this operator as deprecated,
	both in the documentation and through a run-time warning message.

2007-10-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc: List of authors updated

	* configure.ac.in: Do not use "-Werror" flag for debugging library
	by default

	This flag was propagated into itpp-config and itpp.pc scripts and
	this resulted in reporting each warning in users' programs as an
	error.

2007-10-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/gf2mat_test.cpp: Suppress compilation warning about string
	to "char*" conversion

	* itpp/base/converters.cpp, itpp/base/converters.h: Workaround for
	compilation errors when using GCC 3.3.x

	GCC 3.3.x has problems with compilation of a few explicit
	instantiations in converters.cpp from IT++ 4.0.0. This only
	happens when -finline-functions flag is used. This flag is
	included in -03 optimisations. This patch conditionally disables
	these problematic instantiation when GCC version < 3.4.0.

2007-10-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/algebra/svd.h, itpp/base/matfunc.h: Documentation of
	diag() and svd() updated

	* itpp/base/matfunc.h: Fixed a bug in rank() function

	The order of checks in a while loop was wrong and it caused