@@ -7,6 +7,6 @@ Name: @PACKAGE_NAME@
 Description: @PACKAGE_NAME@ is a C++ library of mathematical, signal processing, speech processing, and communications classes and functions
 Version: @PACKAGE_VERSION@
 URL: http://itpp.sourceforge.net/
-Libs: -L${libdir} -l@PACKAGE@
-Libs.private: @LDLIBS@
+Libs: -L${libdir} -l@PACKAGE@@EXPLICIT_LIBS@
+Libs.private:@PRIVATE_LIBS@
 Cflags: -I${includedir} @CXXFLAGS_OPT@
